<package format="2">
  <name>object_tracker</name>
  <version>0.0.0</version>
  <description>The object_tracker package</description>

  <maintainer email="kosuke@todo.todo">kk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>hungarian_algorithm_lib</depend>
  <depend>kalman_filter_lib</depend>
  <depend>object_msgs</depend>

</package>
